--- a/results.qmd
+++ b/results.qmd
@@ -9,7 +9,7 @@ editor: visual
 Our project focuses on unemployment rates during COVID-19 pandemic. According to [WHO](https://www.who.int/europe/emergencies/situations/covid-19), COVID-19 was declared a Public Health Emergency of International Concern (PHEIC) on 30 January 2020 and the Public Health Emergency of International Concern (PHEIC) was lifted on 5 May 2023. Therefore, this project will use data from January 2020 to May 2023 to explore the potential impact of the pandemic on unemployment rates.
 
 ```{r setup}
-knitr::opts_chunk$set(warning = FALSE)
+knitr::opts_chunk$set(warning = FALSE, message = FALSE)
 knitr::opts_chunk$set(fig.width=20, fig.height=20)
 ```
 
@@ -24,6 +24,7 @@ library(dplyr)
 library(tidyr)
 library(tibble)
 library(ggplot2)
+library(vcd)
 #install.packages("choroplethr")
 library(choroplethr)
 #install.packages("choroplethrMaps")
@@ -103,6 +104,42 @@ ggplot(trend_df, aes(time, value)) +
 
 Based on Figure 1, we can observe that the COVID-19 mortality rate experienced three distinct peaks, occurring around the middle of 2020, early 2021, and late 2021. In contrast, the unemployment rate surged in the middle of 2020, coinciding with the first peak in mortality rate, but then gradually declined and stabilized, showing no significant impact from the second and third waves of the pandemic. As for the S&P 500, it also experienced a sharp decline during the first peak in mortality rate but continued to grow afterward, with no apparent influence from the subsequent waves of the pandemic. It's worth noting that in 2022, following the easing of the pandemic, the S&P 500 actually went through a period of decline, possibly due to factors unrelated to the pandemic. In summary, the chart indicates a strong negative correlation between the unemployment rate and the S&P 500, with both being notably affected by the first wave of the pandemic. However, this impact did not persist into the second or third peak periods of the pandemic, as economic conditions gradually improved and stabilized after the initial shock of the first wave.
 
+## How does the unemployment rate differ for different race, sex, age, and marital groups?
+
+```{r, fig.width = 8, fig.height=5}
+UR_2023_sex_race = UR %>% filter(year == 2023) %>% 
+  filter(adjusted==FALSE, sex != "Both", race != "All", age == "All") %>%
+  mutate(value = as.numeric(value)) %>%
+  group_by(sex, race, mari) %>% 
+  summarise(avg = mean(value)) %>%
+  rename(unemployment_rate=avg)
+
+ggplot(UR_2023_sex_race, aes(x=race, y=unemployment_rate, fill=sex)) + 
+  geom_bar(stat = "identity", position = "dodge") + 
+  labs(title = "Figure 2 Unemployment Rate by Race, Sex, and Marital Status in 2023") +
+  ylab("Unemployment Rate (%)") + 
+  facet_wrap(~mari)
+```
+
+From figure 2, we see that the average unemployment rate across the months in 2023 is generally lower for the Asians and Whites compared to Blacks and Latinos. For single Blacks, Latinos, and Whites, the unemployment rate for women is slightly lower than for the men. Interestingly, for single Asians, the unemployment rate for women is significantly lower than for men. However, the opposite is true for divorced Asians; the unemployment rate for divorced Asian women is more than twice as high as the unemployment rate for divorced Asian men. Meanwhile, for the other races in the same category, the disparity between men and women is much smaller. Furthermore, we can observe that the unemployment rate for married individuals in general is noticeably lower compared to to the other marital statuses.
+
+```{r, fig.width = 8, fig.height=4}
+UR_2023_sex_age = UR %>% filter(year == 2023) %>% 
+  filter(adjusted==FALSE, sex != "Both", age != "All", race == "All", mari == "All") %>%
+  mutate(value = as.numeric(value)) %>%
+  group_by(sex, age) %>% 
+  mutate(age = paste(age, "yo"))%>%
+  summarise(avg = mean(value)) %>%
+  rename(unemployment_rate=avg)
+
+ggplot(UR_2023_sex_age, aes(x=age, y=unemployment_rate, fill=sex)) + 
+  geom_bar(stat = "identity", position = "dodge") + 
+  labs(title = "Figure 3 Unemployment Rate by Age and Sex in 2023") +
+  ylab("Unemployment Rate (%)")
+```
+
+Figure 3 examines on the average unemployment rate in 2023 for different age groups and sex. As expected, the unemployment rate is highest for youths in the 16-19 year old group and gradually decreases as age increases. The 35-44 year old age groups and older age groups have around the same unemployment rate of under 3%. In general, women have a lower unemployment rate than men and the difference is greater for the younger age groups.
+
 ## What are the similarities and differences in trends between COVID-19 death rates and the unemployment rates across people of different sex or people with different ethnicity?
 
 ```{r}
@@ -162,14 +199,14 @@ ggplot(trend_df, aes(time, value)) +
   geom_smooth(method = "loess", span = .3, se = FALSE, formula = y ~ x) +
   theme_grey(30) +
   theme(strip.text = element_text(size = 24)) +
-  labs(title = "Figure 2 Trends in COVID-19 Death Rate and Unemployment Rate across people with diferent sex or race") +
+  labs(title = "Figure 4 Trends in COVID-19 Death Rate and Unemployment Rate across people with diferent sex or race") +
   theme(plot.title = element_text(size = 25)) +
   theme(axis.text.x = element_text(angle = 90, hjust = 1))
 ```
 
-According to Figure 2, it can be observed that regardless of the demographic group, the death rate shows three peaks, representing the three waves of the pandemic. Similarly, the unemployment rate exhibits a right-skewed pattern, indicating a rapid increase during the first peak of the pandemic, followed by a gradual decline and stabilization. Furthermore, we can observe that, overall, Asians have lower death rates compared to other racial groups, and females have slightly lower death rates than males. Regarding the unemployment rate, Whites have lower rates compared to other racial groups, and males have slightly lower rates than females. This demonstrates that the relationship between the unemployment rate and the death rate is relative rather than absolute. It suggests that an increase in the death rate often coincides with an increase in the unemployment rate, but it doesn't imply that higher absolute death rates lead to higher absolute unemployment rates.
+According to Figure 4, it can be observed that regardless of the demographic group, the death rate shows three peaks, representing the three waves of the pandemic. Similarly, the unemployment rate exhibits a right-skewed pattern, indicating a rapid increase during the first peak of the pandemic, followed by a gradual decline and stabilization. Furthermore, we can observe that, overall, Asians have lower death rates compared to other racial groups, and females have slightly lower death rates than males. Regarding the unemployment rate, Whites have lower rates compared to other racial groups, and males have slightly lower rates than females. This demonstrates that the relationship between the unemployment rate and the death rate is relative rather than absolute. It suggests that an increase in the death rate often coincides with an increase in the unemployment rate, but it doesn't imply that higher absolute death rates lead to higher absolute unemployment rates.
 
-## What is the potential effects of race and age on the trend of unemployment rate during COVID-19 pendemic?
+## What is the potential effects of race and age on the trend of unemployment rate during COVID-19 pandemic?
 
 ```{r}
 URtrend = UR %>%
@@ -184,17 +221,17 @@ ggplot(URtrend, aes(time, value)) +
   facet_wrap(~ race + age, ncol=7) +
   theme_grey(30) +
   theme(strip.text = element_text(size = 20)) +
-  labs(title = "Figure 3 Trends of Unemployment Rate of people from different races and age") +
+  labs(title = "Figure 5 Trends of Unemployment Rate of people from different races and age") +
   theme(plot.title = element_text(size = 30)) +
   labs(y = "Unemployment Rate (%)") +
   theme(axis.text.x = element_text(angle = 90, hjust = 1)) 
 ```
 
-From Figure 3, it is evident that regardless of race or age group, all were impacted by the first wave of the pandemic, resulting in a notable increase in the unemployment rate. Across all racial groups, it can be observed that relative to adults, both youth and seniors experienced more significant fluctuations in unemployment rates, especially among the youth. The volatility in unemployment rates among the youth did not dissipate after the first wave of the pandemic; in fact, it can be observed that during the second and third waves of the pandemic, the unemployment rate continued to rise. Additionally, irrespective of age, it is noticeable that the unemployment rate for White individuals exhibited less fluctuation compared to other racial groups, with their peak unemployment rates following a similar pattern. In summary, the findings from this chart align with our intuition: the middle-aged individuals who have already established stable foundations in the workplace experience less severe unemployment due to the pandemic's impact. Furthermore, racial groups that generally hold higher socioeconomic status also tend to be less susceptible to pandemic-induced unemployment.
+From Figure 5, it is evident that regardless of race or age group, all were impacted by the first wave of the pandemic, resulting in a notable increase in the unemployment rate. Across all racial groups, it can be observed that relative to adults, both youth and seniors experienced more significant fluctuations in unemployment rates, especially among the youth. The volatility in unemployment rates among the youth did not dissipate after the first wave of the pandemic; in fact, it can be observed that during the second and third waves of the pandemic, the unemployment rate continued to rise. Additionally, irrespective of age, it is noticeable that the unemployment rate for White individuals exhibited less fluctuation compared to other racial groups, with their peak unemployment rates following a similar pattern. In summary, the findings from this chart align with our intuition: the middle-aged individuals who have already established stable foundations in the workplace experience less severe unemployment due to the pandemic's impact. Furthermore, racial groups that generally hold higher socioeconomic status also tend to be less susceptible to pandemic-induced unemployment.
 
 *Note: We really want to compare these trends with those of COVID-19 Death Rates, but we don't have data to do so as the COVID-19 Death Rates data doesn't contain data points for combinations of demographic features.*
 
-## What is the potential effects of marital status and sex on the trend of unemployment rate during COVID-19 pendemic?
+## What is the potential effects of marital status and sex on the trend of unemployment rate during COVID-19 pandemic?
 
 ```{r}
 URtrend = UR %>%
@@ -209,16 +246,16 @@ ggplot(URtrend, aes(time, value)) +
   facet_wrap(~ mari) +
   theme_grey(30) +
   theme(strip.text = element_text(size = 20)) +
-  labs(title = "Figure 4 Trends of Unemployment Rate of people with different sex and marital status") +
+  labs(title = "Figure 6 Trends of Unemployment Rate of people with different sex and marital status") +
   theme(plot.title = element_text(size = 30)) +
   labs(y = "Unemployment Rate (%)") +
-  theme(axis.text.x = element_text(angle = 90, hjust = 1))+
+  theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
   theme(legend.key.size = unit(3, "cm"))
 ```
 
-Figure 4 shows that regardless of gender or marital status, the unemployment rate sharply increased during the first wave of the pandemic and gradually declined to stabilize after this initial peak. Overall, married individuals experienced relatively less impact on their employment status during the first wave of the pandemic, with lower unemployment rates across the pandemic period. In terms of gender, married women had higher unemployment rates compared to men, while the opposite pattern was observed for the other two marital statuses. Moreover, in all three marital statuses, women suffer more from the negative impact of the first wave of the pandemic than men do.
+Figure 6 shows that regardless of gender or marital status, the unemployment rate sharply increased during the first wave of the pandemic and gradually declined to stabilize after this initial peak. Overall, married individuals experienced relatively less impact on their employment status during the first wave of the pandemic, with lower unemployment rates across the pandemic period. In terms of gender, married women had higher unemployment rates compared to men, while the opposite pattern was observed for the other two marital statuses. Moreover, in all three marital statuses, women suffer more from the negative impact of the first wave of the pandemic than men do.
 
-## Which racial group has the most serious unemployment issue during the peak of the national unemployment rate (Apr 2020) given age and sex?
+## Which racial group has the most serious unemployment issue during the peak of the national unemployment rate (Apr 2020) vs April 2023 given age and sex?
 
 ```{r}
 URtrend = UR %>%
@@ -228,7 +265,7 @@ URtrend = UR %>%
   rename(UR = value)
 ```
 
-```{r, fig.width=30, fig.height=30}
+```{r, fig.width=30, fig.height=20}
 theme_heat <- theme_classic() +
   theme(axis.line = element_blank(),
         axis.ticks = element_blank())
@@ -243,19 +280,46 @@ ggplot(URtrend3, aes(x = age, y = race)) +
   facet_wrap(~sex) + theme_heat+
   theme_grey(50) +
   theme(strip.text = element_text(size = 50)) +
-  labs(title = "Figure 5 unemployment severity given age and sex (April 2020)") +
+  labs(title = "Figure 7 unemployment severity given age and sex (April 2020)") +
   theme(plot.title = element_text(size = 50)) +
   theme(axis.text.x = element_text(angle = 90, hjust = 1))+
   theme(legend.text = element_text(size = 25))+
-  theme(legend.title = element_text(size = 35))+
-  theme(legend.key.size = unit(3, "cm"))
+  theme(legend.key.size = unit(2, "cm"))
 ```
 
-From Figure 5, it can be observed that among 20-24-year-old males, Asians face the most severe unemployment issues, among 25-34-year-old males, Blacks face the most severe unemployment issues, among 35-44-year-old males, Latinos face the most severe unemployment issues, among 45-54-year-old males, Blacks face the most severe unemployment issues, among 55-64-year-old males, Asians and Latinos face the most severe unemployment issues, and among males aged 65 and older, Asians face the most severe unemployment issues. Among 20-24-year-old females, Latinos face the most severe unemployment issues, among 25-34-year-old females, Blacks face the most severe unemployment issues, among 35-44-year-old females, Latinos face the most severe unemployment issues, among 45-54-year-old females, Latinos face the most severe unemployment issues, among 55-64-year-old females, Asians face the most severe unemployment issues, and among females aged 65 and older, Latinos face the most severe unemployment issues.
+From Figure 7, it can be observed that among 20-24-year-old males, Asians face the most severe unemployment issues, among 25-34-year-old males, Blacks face the most severe unemployment issues, among 35-44-year-old males, Latinos face the most severe unemployment issues, among 45-54-year-old males, Blacks face the most severe unemployment issues, among 55-64-year-old males, Asians and Latinos face the most severe unemployment issues, and among males aged 65 and older, Asians face the most severe unemployment issues. Among 20-24-year-old females, Latinos face the most severe unemployment issues, among 25-34-year-old females, Blacks face the most severe unemployment issues, among 35-44-year-old females, Latinos face the most severe unemployment issues, among 45-54-year-old females, Latinos face the most severe unemployment issues, among 55-64-year-old females, Asians face the most severe unemployment issues, and among females aged 65 and older, Latinos face the most severe unemployment issues.
 
 In general, regardless of age group and gender, Whites tend to have the least severe unemployment issues among all racial groups. Additionally, for females, Latinos face the most severe unemployment issues in most age groups.
 
-## Which state faced the most severe unemployment issue during the peak of the national unemployment rate (April 2020)?
+```{r, fig.width=30, fig.height=20}
+URtrend = UR %>%
+  filter(adjusted==FALSE, sex!="Both", mari=="All", race!="All", age!="All", age!="16-19", time== ymd('2023-04-01')) %>%
+  mutate(value = as.numeric(value))%>%
+  select(value, sex, race, age) %>%
+  rename(UR = value)
+
+URtrend4 <- URtrend |> group_by(sex, age) |> 
+  mutate(TotalUR = sum(UR)) |> ungroup()
+ggplot(URtrend4, aes(x = age, y = race)) +
+  geom_tile(aes(fill = (UR/TotalUR)), color = "white") +
+  coord_fixed() + 
+  scale_fill_gradient2(low = "black", mid = "white",
+                        high = "red", midpoint = .2) +
+  facet_wrap(~sex) + theme_heat+
+  theme_grey(50) +
+  theme(strip.text = element_text(size = 50)) +
+  labs(title = "Figure 8 unemployment severity given age and sex (April 2023)") +
+  theme(plot.title = element_text(size = 50)) +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1))+
+  theme(legend.text = element_text(size = 25))+
+  theme(legend.key.size = unit(2, "cm"))
+```
+
+Compared to the peak of unemployment rate in April 2020, there has been some changes in the patterns observed for April 2023. Among 20-24-year-old males, Asians now have the lowest unemployment rate compared to other racial groups and Black people have the most severe unemployment issues. The same can be said for the 25-34 and 35-44 age groups. Among 45-54-year-old males, Latinos face the most severe unemployment issues. Among 55-64-year-old males, Asians face the most severe unemployment issues, and among males aged 65 and older, Asians also face the most severe unemployment issues. For females, we observe a similar pattern in unemployment by age and race, expect a few notable differences and a greater disparity in the unemployment rates between different groups. For example, there now appears to be a greater disparity between the Asian and White and the Black and Latino racial groups particularly in the 20-24, 25-34, and 35-44 age groups; the unemployment rate for the Asian and White groups are lower than the rate for Black and Latino groups and the difference is greater comapred to April 2020. Another notable change is in the unemployment rate of Asian females in the 45-54 and 55-64 age groups which declined significantly compared to April 2020, while the unemployment rate for Blacks in the same group increased. Latino females aged 65+ continues to face the most severe unemployment issues.
+
+Overall, there has been an increase in the disparity of unemployment rates across all age, sex, and racial groups in April 2023 compared to April 2020. In general, Whites and Asians tend to have the least severe unemployment issues among all racial groups.
+
+## Which state faced the most severe unemployment issue during the peak of the national unemployment rate (April 2020) and how does it compare to the state's COVID deaths severity at the same time?
 
 ```{r}
 state_UR = read_csv("data/state_UR.csv", show_col_types = FALSE) %>%
@@ -267,17 +331,53 @@ state_UR = read_csv("data/state_UR.csv", show_col_types = FALSE) %>%
   rename(region=state)
 ```
 
-```{r, fig.width=18, fig.height=15}
-state_choropleth(state_UR,
-                 title = "Figure 6 unemployment severity by state (April 2020)",legend = "Unemployment Rate (%)")+
-theme(plot.title = element_text(size = 30))+
-theme(legend.text = element_text(size = 20))+
-theme(legend.title = element_text(size = 25))+
-theme(legend.key.size = unit(2, "cm"))
-
+```{r}
+state_COVID = read_csv('data/Provisional_COVID-19_Deaths_by_Sex_and_Age.csv',show_col_types = FALSE) %>%
+  filter(Group=="By Month", State!="United States", State!="District of Columbia", State!="Puerto Rico", State!="New York City", Sex=="All Sexes", `Age Group`=="All Ages")%>%
+  mutate(time = mdy(`Start Date`)) %>%
+  filter(time == ymd('2020-04-01')) %>%
+  mutate(State = tolower(State))%>%
+  select(State, 'COVID-19 Deaths')%>%
+  rename(region = State, value='COVID-19 Deaths')
 ```
 
-From Figure 6, we can observe that in April 2020, the states of Nevada, Illinois, Michigan, Indiana, Hawaii, and Rhode Island had the most severe unemployment issues. Overall, the unemployment situation on the East and West coasts appeared to be more severe compared to the central inland regions.
+```{r}
+popu = read_excel("data/PopulationReport.xlsx") %>% 
+  select(Name, `Pop. 2020`) %>%
+  rename(region=Name, population=`Pop. 2020`)%>%
+  filter(region!="United States", region!="Puerto Rico", region!="District of Columbia")%>%
+  mutate(region = tolower(region))
+popu = popu %>% slice(1:(n() - 1))
+```
+
+```{r}
+state_DR = state_COVID %>%
+  left_join(popu, by = "region") %>%
+  mutate(value = (value/population)*100000)%>%
+  select(region, value)
+```
+
+```{r, fig.width=18, fig.height=15}
+state_choropleth(state_UR,
+                 title = "Figure 9 unemployment severity by state (April 2020)",legend = "Unemployment Rate (%)") +
+theme(plot.title = element_text(size = 30))+
+theme(legend.text = element_text(size = 20))+
+theme(legend.title = element_text(size = 20)) + 
+theme(legend.key.size = unit(1, "cm"))
+```
+
+```{r, fig.width=18, fig.height=15}
+state_choropleth(state_DR,
+                 title = "Figure 10 COVID deaths severity by state (April 2020)",legend = "COVID Death Rate (per 100,000)") +
+theme(plot.title = element_text(size = 30))+
+theme(legend.text = element_text(size = 20))+
+theme(legend.title = element_text(size = 20)) + 
+theme(legend.key.size = unit(1, "cm"))
+```
+
+From Figure 9, we can observe that in April 2020, the states of Nevada, Illinois, Michigan, Indiana, Hawaii, and Rhode Island had the most severe unemployment issues. Overall, the unemployment situation on the East and West coasts appeared to be more severe compared to the central inland regions.
+
+When compared to Figure 10, it becomes evident that the majority of states with the most severe unemployment situations also exhibit a relatively severe COVID deaths severity. Hawaii is an exception in this regard, as it experiences significant unemployment, but its COVID deaths severity is quite mild. This aligns with our intuition, as Hawaii heavily relies on the tourism industry. With the global border closures due to the pandemic, the tourism sector has suffered a severe blow, leading to a high unemployment rate in Hawaii. However, this situation is not directly related to the local severity of the pandemic but rather connected to global border policies adopted by various countries.
 
 ## Which state faced the most severe pandemic-related death issue during the peak of the national COVID death rate (January 2021)?
 
@@ -293,8 +393,8 @@ state_COVID = read_csv('data/Provisional_COVID-19_Deaths_by_Sex_and_Age.csv',sho
 
 ```{r}
 popu = read_excel("data/PopulationReport.xlsx") %>% 
-  select(Name, `Pop. 2022`) %>%
-  rename(region=Name, population=`Pop. 2022`)%>%
+  select(Name, `Pop. 2020`) %>%
+  rename(region=Name, population=`Pop. 2020`)%>%
   filter(region!="United States", region!="Puerto Rico", region!="District of Columbia")%>%
   mutate(region = tolower(region))
 popu = popu %>% slice(1:(n() - 1))
@@ -307,13 +407,35 @@ state_DR = state_COVID %>%
   select(region, value)
 ```
 
-```{r, fig.width=18, fig.height=15}
-state_choropleth(state_DR,
-                 title = "Figure 7 COVID deaths severity by state (January 2021)",legend = "COVID Death Rate\n (per 100,000 population)")+
-theme(plot.title = element_text(size = 30))+
-theme(legend.text = element_text(size = 20))+
-theme(legend.title = element_text(size = 20))+
-theme(legend.key.size = unit(2, "cm"))
+```{r}
+state_UR = read_csv("data/state_UR.csv", show_col_types = FALSE) %>%
+  mutate(time = ym(paste(year, month, sep = "-"))) %>%
+  filter(time == ymd('2021-01-01')) %>%
+  select(state, value) %>%
+  mutate(state = tolower(state))%>%
+  filter(state!="district of columbia", state!="puerto rico")%>%
+  rename(region=state)
 ```
 
-From Figure 7, we can observe that in January 2021, the states of Arizona, California, Oklahoma, Alabama, Mississippi, and West Virginia had the most severe COVID-19 situation in terms of deaths. Overall, the COVID-19 death situation in the southern states appeared to be more severe compared to the northern regions.
+
+```{r, fig.width=18, fig.height=15}
+state_choropleth(state_DR,
+                 title = "Figure 11 COVID deaths severity by state (January 2021)",legend = "COVID Death Rate (per 100,000)") +
+theme(plot.title = element_text(size = 30))+
+theme(legend.text = element_text(size = 20))+
+theme(legend.title = element_text(size = 20)) + 
+theme(legend.key.size = unit(1, "cm"))
+```
+
+```{r, fig.width=18, fig.height=15}
+state_choropleth(state_UR,
+                 title = "Figure 12 unemployment severity by state (January 2021)",legend = "Unemployment Rate (%)") +
+theme(plot.title = element_text(size = 30))+
+theme(legend.text = element_text(size = 20))+
+theme(legend.title = element_text(size = 20)) + 
+theme(legend.key.size = unit(1, "cm"))
+```
+
+From Figure 11, we can observe that in January 2021, the states of Arizona, California, Oklahoma, Alabama, Mississippi, Tennessee, and South Carolina had the most severe COVID-19 situation in terms of deaths. Overall, the COVID-19 death situation in the southern states appeared to be more severe compared to the northern regions.
+
+When compared to Figure 12, we can observe that in those Southeastern states where the COVID-19 pandemic is more severe, the unemployment situation is relatively less severe. Conversely, in states like Washington and Oregon, where the pandemic is less severe, the unemployment situation appears to be notably more severe.
